tests/invalid/syntax/binary_missing_rhs.nyx
// INVALID: Binary operator with missing right operand
// Expected parse error: right-hand side of binary expression required
func bad(x: i32) -> ok
    let y = x +
    pass
